fixed parallax overflow

--- a/jerramdotdev/src/index.css
+++ b/jerramdotdev/src/index.css
@@ -70,7 +70,7 @@
 
 @layer base {
   * {
-    @apply border-border scroll-smooth;
+    @apply border-border scroll-smooth box-border m-0 p-0;
   }
   body {
     @apply bg-background text-foreground font-monserrat snap-y snap-mandatory scroll-smooth;
